# exploring-fastapi

./: .env.example  .pre-commit-config.yaml  README.md  alembic.ini  docker-compose.yml  justfile  pyproject.toml
alembic/: env.py
alembic/versions/: 2024-06-24_initial_migration.py  2024-06-25_add_todocategory_table.py  2024-07-03_add_todo_table.py
src/: api.py  config.py  constants.py  dependencies.py  exceptions.py  main.py
src/db/: __init__.py  base.py  exceptions.py  mixin.py  session.py
src/modules/todo_categories/: dependencies.py  exceptions.py  models.py  router.py  schemas.py  service.py
src/modules/todos/: dependencies.py  models.py  router.py  schemas.py  service.py
src/utils/: db.py
tests/: conftest.py  data_fixtures.py
tests/integration/: conftest.py  test_health.py  test_todo_categories.py  test_todos.py
